src/test/deca/context/valid/testConvFloat.deca
// Description : Teste la conversion en float d'une valeur int

{
    float x;
    x = 3;
}
