src/test/deca/context/invalid/testWrongInitialisation.deca
// Description : mauvaise valeur d'initialisation
{
    int x = true;
}
